fixed nav button on mobile

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ body {
 }
 
 .show-nav {
-    display: flex;
+    display: flex !important;
     flex-direction: column;
     background-color: #2a2a2a;
     position: absolute;
